# svkg

./: .gitmodules  CMakeLists.txt  README.md  compile_flags.txt
examples/: CMakeLists.txt
examples/hello_sounds/: CMakeLists.txt  main.c
examples/hello_world/: CMakeLists.txt  main.c
examples/rectangle/: CMakeLists.txt  main.c
include/: svkg.h  svkg_audio.h  svkg_graphics.h  svkg_input.h  svkg_math.h
src/: svkg.c  svkg_audio.c  svkg_graphics.c  svkg_input.c  svkg_math.c
